Add caching, DTO records, search endpoints & admin UI
Enable simple in-memory caching and improve API features, DTOs and frontend management.

Backend:
- Enabled Spring caching (@EnableCaching) and added CacheConfig with a ConcurrentMapCacheManager for "produtos".
- Converted multiple DTO classes to Java records (ProdutoRequestDTO, ProdutoResponseDTO, ProdutoVarianteRequestDTO, ProdutoVarianteResponseDTO).
- Added repository query methods (findByNomeContainingIgnoreCase, findByClassificacao).
- Made listarTodos() cacheable and added service methods for searching and filtering by classificacao.
- Extended ProdutoController: lighter list endpoint (reduces variant payload), search (/api/produtos/search?q=), filter by classificacao (/api/produtos/classificacao), and improved request/response mapping and error handling.
- Improved ProdutoVarianteController: endpoints use DTO records, associate variants with products on create, and cleaned up response mapping.

Frontend:
- Added an Admin page and stylesheet for product management (delete support and a simple table UI).
- Expanded ProdutoContext to support searching, filtering by classificacao, delete operations, and exposing query state.
- Updated Navbar to integrate search (Enter/click), filtering shortcuts (Destaque/Novo), and navigation to admin; added smooth scroll to products section.
- Small component improvements: Anuncio now lazy-loads images; Destaques adjusted product handling and imports; LinkButton accepts onClick.
- Removed several unused category pages (Feminino, Masculino, Lancamento, Ofertas) and updated routes/services accordingly.

These changes add basic caching, search and filter capabilities, refactor DTOs to concise records, and introduce a simple admin UI for managing products.